# terminal-agent

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  to-dos.md  uninstall.sh
src/: config.py  graph.py  model.py  runner.py
src/emitters/: terminal_emitter.py
src/interfaces/: emitter.py  prompt_loader.py  vector_db_manager.py
src/nodes/: llm_model.py  tool.py
src/prompts/: prompt_loader.py  system_prompt.md
src/prompts/tool_descriptions/: memorize.md  modify_text_file.md  read_text_file.md  recall.md
src/routers/: continue_with_tools.py
src/tools/: bash.py  memorize.py  modify_text_file.py  read_text_file.py  recall.py
src/tools/file_reader/: file_reader.py
src/vectordb/: chroma_db_manager.py
tests/tools/: test_modify_text_file.py  test_read_text_file.py
